// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente ProductImage Debe de mostrar el componente con la imagen del context 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="coffee mug"
    className=" productImg  undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Pruebas en el componente ProductImage Debe de mostrar el componente correctamente con la imagen 1`] = `
<img
  alt="coffee mug"
  className=" productImg  undefined"
  src="https://image.com"
/>
`;
